<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:weightSum="1"
    android:background="@color/colorPrimary"
    tools:context="com.threelancer.gooddeeds.Activities.login.CreateAccountActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/register_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="48sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/lists_title_bottom_margin"
        app:hintTextAppearance="@style/HintText">

        <AutoCompleteTextView
            android:id="@+id/edit_text_username_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/firstName_text"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/lists_title_bottom_margin"
        app:hintTextAppearance="@style/HintText">

        <AutoCompleteTextView
            android:id="@+id/edit_text_email_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/email_prompt"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/lists_title_bottom_margin"
        app:hintTextAppearance="@style/HintText">

        <EditText
            android:id="@+id/edit_text_password_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:ems="10"
            android:hint="@string/pw_prompt"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onCreateAccountPressed"
        android:layout_margin="16dp"
        android:text="@string/register_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_already_have_account"
            style="@style/LoginCreateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_already_have_account"
            android:textColor="@color/White" />

        <TextView
            android:id="@+id/tv_sign_in"
            style="@style/LoginCreateTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSignInPressed"
            android:text="@string/button_sign_in"
            android:textColor="@color/colorAccent" />
    </LinearLayout>


</LinearLayout>