<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="top|center"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/logo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GoodDeeds"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="48sp" />

    <LinearLayout
        android:id="@+id/main_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="32dp"
            android:alpha="1"
            android:text="@string/login_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="48sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
            android:alpha="1"
            app:hintTextAppearance="@style/HintText">

            <AutoCompleteTextView
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:alpha="1"
                android:hint="@string/email_prompt"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            android:alpha="1"
            app:hintTextAppearance="@style/HintText">

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:alpha="1"
                android:ems="10"
                android:hint="@string/pw_prompt"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:alpha="1"
            android:onClick="onSignInPressed"
            android:text="@string/login_button" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:alpha="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dont_have_account"
                style="@style/LoginCreateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_dont_have_account"
                android:textColor="@color/White" />

            <TextView
                android:id="@+id/tv_sign_up"
                style="@style/LoginCreateTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSignUpPressed"
                android:text="@string/button_create_account"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>